# ChangeLog for app-office/eqe
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/eqe/ChangeLog,v 1.8 2008/09/03 06:41:49 aballier Exp $

  03 Sep 2008; Alexis Ballier <aballier@gentoo.org> eqe-1.3.0.ebuild:
  depend only on latex-base, not virtual/tetex

  02 Sep 2008; Alexis Ballier <aballier@gentoo.org> -eqe-1.0.4.ebuild,
  -eqe-1.2.0.ebuild:
  remove old

  12 Mar 2007; Alexandre Buisse <nattfodd@gentoo.org> metadata.xml:
  Replaced text-markup by tex as maintaining herd (text-markup split).

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

*eqe-1.3.0 (14 Feb 2006)

  14 Feb 2006; Martin Ehmsen <ehmsen@gentoo.org>
  +files/eqe-1.3.0-Makefile.patch, +eqe-1.3.0.ebuild:
  Version bump thanks to Robert Turnbull <Robert.Turnbull@sci.monash.edu.au>,
  bug #74983.

*eqe-1.2.0 (31 Dec 2005)

  31 Dec 2005; Alexandre Buisse <nattfodd@gentoo.org> +eqe-1.2.0.ebuild:
  Bump to 1.2.0 (complete rewrite of the code, apparently) with a modified
  ebuild of bug #74983.

  22 Jul 2005; David Holm <dholm@gentoo.org> eqe-1.0.4.ebuild:
  Added to ~ppc.

*eqe-1.0.4 (29 May 2005)

  29 May 2005; Mamoru KOMACHI <usata@gentoo.org> +metadata.xml,
  +eqe-1.0.4.ebuild:
  Initial import. Ebuild submitted by Robert Turnbull
  <Robert.Turnbull@sci.monash.edu.au>; bug #74983.
