@@ -1,6 +1,9 @@
 # ChangeLog for app-office/eqe
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/eqe/ChangeLog,v 1.8 2008/09/03 06:41:49 aballier Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-office/eqe/ChangeLog,v 1.9 2009/09/27 12:16:56 maekke Exp $
+
+  27 Sep 2009; Markus Meier <maekke@gentoo.org> eqe-1.3.0.ebuild:
+  amd64/x86 stable, bug #286339
 
   03 Sep 2008; Alexis Ballier <aballier@gentoo.org> eqe-1.3.0.ebuild:
   depend only on latex-base, not virtual/tetex
